--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TWILLI | Air</title>
+    <title>Project Kharazmi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
 
     <div class="background-image-overlay"></div>
 
-    <div id="outer-background-container" data-default-background-img="assets/images/other_images/bg5.jpg" style="background-image:url(assets/images/other_images/bg5.jpg);"></div>
+    <div id="outer-background-container" data-default-background-img="assets/images/top-panel/background-flipped.jpg" style="background-image:url(assets/images/top-panel/background-flipped.jpg);"></div>
     <!-- end: #outer-background-container -->    
 
     <!-- Outer Container -->
@@ -42,18 +42,20 @@
       <section id="left-sidebar">
         
         <div class="logo">
-          <a href="#intro" class="link-scroll"><img src="assets/images/other_images/logo.png" alt="Twilli Air"></a>
+          <a href="#intro" class="link-scroll">Project Kharazmi</a>
         </div><!-- .logo -->
 
         <!-- Menu Icon for smaller viewports -->
         <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
 
         <ul id="main-menu">
-          <li id="menu-item-text" class="menu-item scroll"><a href="#text">Text</a></li>
-          <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Carousel</a></li>
-          <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Grid</a></li>
-          <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Featured</a></li>
-          <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Contact</a></li>
+          <li id="menu-item-text" class="menu-item scroll"><a href="#text">Overview</a></li>
+          <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel">Sample day</a></li>
+          <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Demo day</a></li>
+          <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Testimonials</a></li>
+          <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Tuition</a></li>          
+          <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Team</a></li>          
+          <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">FAQ</a></li>
         </ul><!-- #main-menu -->
 
       </section><!-- #left-sidebar -->
@@ -61,13 +63,15 @@
 
       <section id="main-content" class="clearfix">
         
-        <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg5.jpg">
+        <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/top-panel/background-flipped.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-10 col-md-9 pull-right">
 
                 <section class="feature-text">
-                  <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
-                  <p>Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio, sit amet. </p>
+                  <h1>Learn to <span style="color: #141C39;">code.</span></h1>
+                  <h1>Solve <span style="color: #141C39;">problems.</span></h1>
+                  <h1>Shape the <span style="color: #141C39;">future.</span></h1>
+                  <p>Join our one-week summer camp that teaches students computational thinking, problem solving, and building a webpage from scratch using HTML, CSS, and JavaScript.</p>
                   <p><a href="#text" class="link-scroll btn btn-outline-inverse btn-lg">find out more</a></p>
                 </section>
 
@@ -447,7 +451,7 @@
     <!--[if lt IE 9]>
     <script type="text/javascript">
     $(document).ready(function(){
-      jQuery("#outer-background-container").backstretch("assets/images/other_images/bg5.jpg");
+      jQuery("#outer-background-container").backstretch("assets/images/top-panel/background-flipped.jpg");
     });
     </script> 
     <![endif]-->  
