--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,9 @@
         <div id="mobile-menu-icon" class="visible-xs" onClick="toggle_main_menu();"><span class="glyphicon glyphicon-th"></span></div>
 
         <ul id="main-menu">
-          <li id="menu-item-text" class="menu-item scroll"><a href="#text">Overview</a></li>
-          <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel-morning">Sample morning</a></li>
-          <li id="menu-item-carousel" class="menu-item scroll"><a href="#carousel-afternoon">Sample afternoon</a></li>
+          <li id="menu-item-overview" class="menu-item scroll"><a href="#overview">Overview</a></li>
+          <li id="menu-item-carousel1" class="menu-item scroll"><a href="#carousel1">Sample morning</a></li>
+          <li id="menu-item-carousel2" class="menu-item scroll"><a href="#carousel2">Sample afternoon</a></li>
           <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Demo day</a></li>
           <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Testimonials</a></li>
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Tuition</a></li>          
@@ -80,7 +80,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="grid" class="section-wrapper clearfix" data-custom-background-img="assets/images/overview-panel/background.jpg">
+        <article id="overview" class="section-wrapper clearfix" data-custom-background-img="assets/images/overview-panel/background.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-11 col-md-10 pull-left">
 
@@ -117,7 +117,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="carousel-morning" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg6.jpg">
+        <article id="carousel1" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg6.jpg">
           <div class="content-wrapper clearfix">
 
               <div id="features-carousel" class="carousel slide with-title-indicators max-height" data-height-percent="70" data-ride="carousel">
@@ -278,21 +278,21 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="carousel-afternoon" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg6.jpg">
+        <article id="carousel2" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg6.jpg">
           <div class="content-wrapper clearfix">
 
-              <div id="features-carousel" class="carousel slide with-title-indicators max-height" data-height-percent="70" data-ride="carousel">
+              <div id="features-carousel2" class="carousel slide with-title-indicators max-height" data-height-percent="70" data-ride="carousel">
                 
                 <!-- Indicators - slide navigation -->
                 <ol class="carousel-indicators title-indicators">
-                  <li data-target="#features-carousel" data-slide-to="0" class="active">1:00pm</li>
-                  <li data-target="#features-carousel" data-slide-to="1">1:30pm</li>
-                  <li data-target="#features-carousel" data-slide-to="2">1:45pm</li>
-                  <li data-target="#features-carousel" data-slide-to="3">2:45pm</li>
-                  <li data-target="#features-carousel" data-slide-to="4">3:00pm</li>
-                  <li data-target="#features-carousel" data-slide-to="5">3:30pm</li>
-                  <li data-target="#features-carousel" data-slide-to="6">4:00pm</li>
-                  <li data-target="#features-carousel" data-slide-to="7">4:30pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="0" class="active">1:00pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="1">1:30pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="2">1:45pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="3">2:45pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="4">3:00pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="5">3:30pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="6">4:00pm</li>
+                  <li data-target="#features-carousel2" data-slide-to="7">4:30pm</li>
                 </ol>
 
                 <!-- Wrapper for slides -->
@@ -431,8 +431,8 @@
                 </div><!-- .carousel-inner -->
 
                 <!-- Controls -->
-                <a class="left carousel-control" href="#features-carousel" data-slide="prev"></a>
-                <a class="right carousel-control" href="#features-carousel" data-slide="next"></a>
+                <a class="left carousel-control" href="#features-carousel2" data-slide="prev"></a>
+                <a class="right carousel-control" href="#features-carousel2" data-slide="next"></a>
 
               </div><!-- #about-carousel -->
 
