--- a/public/index.html
+++ b/public/index.html
@@ -373,25 +373,59 @@
 
         <article id="text" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg1.jpg">
           <div class="content-wrapper clearfix">
-            <div class="col-sm-10 col-md-9 pull-right">
-
-                <h1 class="section-title">Text Content</h1>
-
-                <p class="feature-paragraph"><img data-img-src="assets/images/other_images/transp-image5b.png" class="lazy pull-right" alt="Lorem Ipsum">Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. <a href="#carousel">Suspendisse molestie lorem odio</a>, sit amet. Laoreet consequat. Duis dictum lorem metus, vitae dapibus.</p>
-                <h4>Duis dictum lorem metus</h4>
-                <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio. Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo. Pellentesque sed malesuada turpis. Quisque eget lacus sit amet dui.</p>
-                <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
-                
-                <div class="content-to-populate-in-modal" id="modal-content-1">
-                  <h1>Lorem Ipsum</h1>
-                  <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
-                  <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p>
-                  <h3>Duis dictum lorem metus, vitae dapibus</h3>
-                  <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Sed auctor urna mi, sed fringilla felis vulputate nec. Cras eu nibh id quam pretium convallis. Donec ante enim, placerat nec sagittis sit amet, tempor in velit. Maecenas ultricies commodo lacus id porta. Suspendisse eros elit, lacinia vitae erat vitae, egestas accumsan nunc. Maecenas dictum odio ipsum, non volutpat erat consequat tempor. Pellentesque sed malesuada turpis. Quisque eget lacus sit amet dui feugiat molestie sit amet eget purus. Morbi eget neque nec lectus tempus sagittis nec at ante. </p>
-                  <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p>
-                </div><!-- #modal-content-1 -->
-
-            </div><!-- .col-sm-10 -->
+            <div class="row" id="plans">
+              <div class="col-lg-12"><h2 class="cs-heading bottom-space">Pricing Plans</h2></div>
+            </div>
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="pricing-plan">
+                  <div class="header">
+                    <h3>Pricing Plan 01</h3>
+                    <span class="price">9.99 $</span>
+                  </div>
+                  <div class="body">
+                    <uL>
+                      <li>Lots of Components</li>
+                      <li>Cool Icons</li>
+                      <li>Unlimited colors</li>
+                    </uL>
+                    <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="pricing-plan highlited">
+                  <div class="header">
+                    <h3>Pricing Plan 02</h3>
+                    <span class="price">19.99 $</span>
+                  </div>
+                  <div class="body">
+                    <uL>
+                      <li>Lots of Components</li>
+                      <li>Cool Icons</li>
+                      <li>Unlimited colors</li>
+                    </uL>
+                    <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4">
+                <div class="pricing-plan">
+                  <div class="header">
+                    <h3>Pricing Plan 03</h3>
+                    <span class="price">149.99 $</span>
+                  </div>
+                  <div class="body">
+                    <uL>
+                      <li>Lots of Components</li>
+                      <li>Cool Icons</li>
+                      <li>Unlimited colors</li>
+                    </uL>
+                    <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
