--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,7 @@
           <li id="menu-item-overview" class="menu-item scroll"><a href="#overview">Overview</a></li>
           <li id="menu-item-carousel1" class="menu-item scroll"><a href="#carousel1">Sample morning</a></li>
           <li id="menu-item-carousel2" class="menu-item scroll"><a href="#carousel2">Sample afternoon</a></li>
-          <li id="menu-item-grid" class="menu-item scroll"><a href="#grid">Demo day</a></li>
-          <li id="menu-item-featured" class="menu-item scroll"><a href="#featured">Testimonials</a></li>
-          <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Tuition</a></li>          
+          <li id="menu-item-cost" class="menu-item scroll"><a href="#cost">cost and dates</a></li>          
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Team</a></li>          
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">FAQ</a></li>
         </ul><!-- #main-menu -->
@@ -371,23 +369,30 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="text" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg1.jpg">
+        <article id="cost" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
+
+
           <div class="content-wrapper clearfix">
-            <div class="row" id="plans">
-              <div class="col-lg-12"><h2 class="cs-heading bottom-space">Pricing Plans</h2></div>
+            <h2 class="section-title heading-center">Dates and cost</h2>
+            <div class="row">
+              <ul id="dates">
+                <li>Week 1</li>
+                <li>Week 2</li>
+                <li>Week 3</li>
+                <li>Week 4</li>
+              </ul>
             </div>
             <div class="row">
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="pricing-plan">
                   <div class="header">
-                    <h3>Pricing Plan 01</h3>
-                    <span class="price">9.99 $</span>
+                    <h3>Half day</h3>
+                    <span class="price">$199</span>
                   </div>
                   <div class="body">
                     <uL>
-                      <li>Lots of Components</li>
-                      <li>Cool Icons</li>
-                      <li>Unlimited colors</li>
+                      <li>Either morning or afternoon</li>
+                      <li>Specialized focus</li>
                     </uL>
                     <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
                   </div>
@@ -395,15 +400,15 @@
               </div>
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="pricing-plan highlited">
-                  <div class="header">
-                    <h3>Pricing Plan 02</h3>
-                    <span class="price">19.99 $</span>
+                  <div class="header-highlighted">
+                    <h3>Full day</h3>
+                    <span class="price">$349</span>
                   </div>
                   <div class="body">
                     <uL>
-                      <li>Lots of Components</li>
-                      <li>Cool Icons</li>
-                      <li>Unlimited colors</li>
+                      <li>Both morning and afternoon</li>
+                      <li>Complete approach</li>
+                      <li>Lunch and yoga included</li>
                     </uL>
                     <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
                   </div>
@@ -412,14 +417,14 @@
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="pricing-plan">
                   <div class="header">
-                    <h3>Pricing Plan 03</h3>
-                    <span class="price">149.99 $</span>
+                    <h3>Extras</h3>
+                    <span class="price"></span>
                   </div>
                   <div class="body">
                     <uL>
-                      <li>Lots of Components</li>
-                      <li>Cool Icons</li>
-                      <li>Unlimited colors</li>
+                      <li>Aftercare: $15/hour</li>
+                      <li>Lunch and yoga: $15/day</li>
+                      <li>Laptop rental: $75/week</li>
                     </uL>
                     <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
                   </div>
