separated out dates and costs into different divs

--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="carousel2" class="section-wrapper clearfix" data-custom-background-img="assets/images/sample-afternoon/background.jpg">
+        <article id="carousel2" class="section-wrapper clearfix" data-custom-background-img="assets/images/sample-afternoon-panel/background.jpg">
           <div class="content-wrapper clearfix">
 
               <div id="features-carousel2" class="carousel slide with-title-indicators max-height" data-height-percent="70" data-ride="carousel">
@@ -373,21 +373,59 @@
 
 
           <div class="content-wrapper clearfix">
-            <h2 class="section-title heading-center">Dates and cost</h2>
+            <h2 class="section-title heading-center">Dates</h2>
             <div class="row">
               <ul id="dates">
-                <li>Week 1</li>
-                <li>Week 2</li>
-                <li>Week 3</li>
-                <li>Week 4</li>
+                <div>
+                  <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">South Austin</a></h3>
+                  
+                  <div class="content-to-populate-in-modal" id="modal-content-1">
+                    <h1>Lorem Ipsum</h1>
+                    <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
+                    <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p> 
+                  </div>        
+                    <li>
+                      <h6 class="weeks">Week 1</h6>
+                      <p class="weeks">June 16 - June 20</p>
+                    </li>
+                    <li>
+                      <h6 class="weeks">Week 2</h6>
+                      <p class="weeks">June 23 - June 27</p>
+                    </li>
+                </div>
+                <div>
+                  <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">North Austin</a></h3>
+                  
+                  <div class="content-to-populate-in-modal" id="modal-content-1">
+                    <h1>Lorem Ipsum</h1>
+                    <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
+                    <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p> 
+                  </div>
+                  <li>
+                    <h6 class="weeks">Week 3</h6>
+                    <p class="weeks">July 7 - July 11</p>
+                  </li>
+                  <li>
+                    <h6 class="weeks">Week 4</h6>
+                    <p class="weeks">July 14 - 18</p>
+                  </li>
+                </div>
               </ul>
             </div>
+          </div><!-- .content-wrapper -->
+        </article><!-- .section-wrapper -->
+
+        <article id="cost" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
+
+
+          <div class="content-wrapper clearfix">
+            <h2 class="section-title heading-center">Cost</h2>
             <div class="row">
               <div class="col-lg-4 col-md-4 col-sm-4">
                 <div class="pricing-plan">
                   <div class="header">
                     <h3>Half day</h3>
-                    <span class="price">$199</span>
+                    <span class="price">$199 <span style="font-size: .5em;">/ week</span></span>
                   </div>
                   <div class="body">
                     <uL>
@@ -402,7 +440,7 @@
                 <div class="pricing-plan highlited">
                   <div class="header-highlighted">
                     <h3>Full day</h3>
-                    <span class="price">$349</span>
+                    <span class="price">$349 <span style="font-size: .5em;">/ week</span></span>
                   </div>
                   <div class="body">
                     <uL>
@@ -423,7 +461,7 @@
                   <div class="body">
                     <uL>
                       <li>Aftercare: $15/hour</li>
-                      <li>Lunch and yoga: $15/day</li>
+                      <li>Lunch and yoga: $20/day</li>
                       <li>Laptop rental: $75/week</li>
                     </uL>
                     <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
