--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,43 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Javascripts
+    ================================================== -->
+
+    <!-- Jquery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Easing - for transitions and effects -->
+    <script src="assets/js/jquery.easing.1.3.js"></script>
+
+    <!-- background image strech script -->
+    <script src="assets/js/jquery.backstretch.min.js"></script>
+    <!-- background image fix for IE 9 or less
+       - use same background as set above to <body> -->
+    <!--[if lt IE 9]>
+    <script type="text/javascript">
+    $(document).ready(function(){
+      jQuery("#outer-background-container").backstretch("assets/images/top-panel/background-flipped.jpg");
+    });
+    </script> 
+    <![endif]-->  
+
+    <!-- detect mobile browsers -->
+    <script src="assets/js/detectmobilebrowser.js"></script>
+
+    <!-- owl carousel js -->
+    <script src="assets/js/owl-carousel/owl.carousel.min.js"></script>
+
+    <!-- Custom functions for this theme -->
+    <script src="assets/js/functions.min.js"></script>
+    <script src="assets/js/initialise-functions.js"></script>
+    
+    <!-- IE9 form fields placeholder fix -->
+    <!--[if lt IE 9]>
+    <script>contact_form_IE9_placeholder_fix();</script>
+    <![endif]-->  
   </head>
 
   <body>
@@ -52,7 +89,8 @@
           <li id="menu-item-overview" class="menu-item scroll"><a href="#overview">Overview</a></li>
           <li id="menu-item-carousel1" class="menu-item scroll"><a href="#carousel1">Sample morning</a></li>
           <li id="menu-item-carousel2" class="menu-item scroll"><a href="#carousel2">Sample afternoon</a></li>
-          <li id="menu-item-cost" class="menu-item scroll"><a href="#cost">cost and dates</a></li>          
+          <li id="menu-item-dates-panel" class="menu-item scroll"><a href="#dates-panel">dates</a></li>          
+          <li id="menu-item-cost" class="menu-item scroll"><a href="#cost">cost</a></li>          
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Team</a></li>          
           <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">FAQ</a></li>
         </ul><!-- #main-menu -->
@@ -369,7 +407,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="cost" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
+        <article id="dates-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
 
 
           <div class="content-wrapper clearfix">
@@ -653,42 +691,6 @@
       </div><!-- .modal-dialog -->
     </div><!-- .modal -->    
 
-    <!-- Javascripts
-    ================================================== -->
-
-    <!-- Jquery and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- Easing - for transitions and effects -->
-    <script src="assets/js/jquery.easing.1.3.js"></script>
-
-    <!-- background image strech script -->
-    <script src="assets/js/jquery.backstretch.min.js"></script>
-    <!-- background image fix for IE 9 or less
-       - use same background as set above to <body> -->
-    <!--[if lt IE 9]>
-    <script type="text/javascript">
-    $(document).ready(function(){
-      jQuery("#outer-background-container").backstretch("assets/images/top-panel/background-flipped.jpg");
-    });
-    </script> 
-    <![endif]-->  
-
-    <!-- detect mobile browsers -->
-    <script src="assets/js/detectmobilebrowser.js"></script>
-
-    <!-- owl carousel js -->
-    <script src="assets/js/owl-carousel/owl.carousel.min.js"></script>
-
-    <!-- Custom functions for this theme -->
-    <script src="assets/js/functions.min.js"></script>
-    <script src="assets/js/initialise-functions.js"></script>
-
-    <!-- IE9 form fields placeholder fix -->
-    <!--[if lt IE 9]>
-    <script>contact_form_IE9_placeholder_fix();</script>
-    <![endif]-->  
 
   </body>
 </html>
