added team section

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
           <li id="menu-item-carousel2" class="menu-item scroll"><a href="#carousel2">Sample afternoon</a></li>
           <li id="menu-item-dates-panel" class="menu-item scroll"><a href="#dates-panel">dates</a></li>          
           <li id="menu-item-cost" class="menu-item scroll"><a href="#cost">cost</a></li>          
-          <li id="menu-item-contact" class="menu-item scroll"><a href="#contact">Team</a></li>          
+          <li id="menu-item-team" class="menu-item scroll"><a href="#team">Team</a></li>          
           <li id="menu-item-faq-panel" class="menu-item scroll"><a href="#faq-panel">FAQ</a></li>
         </ul><!-- #main-menu -->
 
@@ -408,8 +408,6 @@
         </article><!-- .section-wrapper -->
 
         <article id="dates-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
-
-
           <div class="content-wrapper clearfix">
             <h2 class="section-title heading-center">Dates</h2>
             <div class="row">
@@ -418,9 +416,8 @@
                   <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">South Austin</a></h3>
                   
                   <div class="content-to-populate-in-modal" id="modal-content-1">
-                    <h1>Lorem Ipsum</h1>
-                    <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
-                    <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p> 
+                    <h1>Location TBD</h1>
+                    <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">
                   </div>        
                     <li>
                       <h6 class="weeks">Week 1</h6>
@@ -498,8 +495,8 @@
                   </div>
                   <div class="body">
                     <uL>
-                      <li>Aftercare: $15/hour</li>
-                      <li>Lunch and yoga: $20/day</li>
+                      <li>Aftercare: $10/hour</li>
+                      <li>Lunch and yoga: $15/day</li>
                       <li>Laptop rental: $75/week</li>
                     </uL>
                     <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
@@ -510,16 +507,59 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
+        <article id="team" class="section-wrapper clearfix" data-custom-background-img="assets/images/pricing-panel/background-flipped.jpg">
+          <section class="page-block team" id="team">
+            <div class="container">
+              <h2 class="section-title heading-center">Team</h2>
+              <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3">
+                  <img class="img-circle-thumbnail img-center" src="http://placekitten.com/g/263/263" alt="Dexter Dirk"/>
+                  <h3>Dexter Dirk</h3>
+                  <p>Senior designer</p>
+                  <div class="social-networks">
+                    <a class="icon-facebook tooltipped" href="#" title="Facebook"></a>
+                    <a class="icon-instagram tooltipped" href="#" title="Instagram"></a>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3">
+                  <img class="img-circle-thumbnail img-center" src="http://placekitten.com/g/263/263" alt="Alexander Roe"/>
+                  <h3>Alexander Roe</h3>
+                  <p>Financial director</p>
+                  <div class="social-networks">
+                    <a class="icon-twitter tooltipped" href="#" title="Twitter"></a>
+                    <a class="icon-google-plus tooltipped" href="#" title="Google+"></a>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3">
+                  <img class="img-circle-thumbnail img-center" src="http://placekitten.com/g/263/263" alt="Susanna Davis"/>
+                  <h3>Susanna Davis</h3>
+                  <p>Art director</p>
+                  <div class="social-networks">
+                    <a class="icon-youtube tooltipped" href="#" title="Youtube"></a>
+                    <a class="icon-tumblr tooltipped" href="#" title="Tumblr"></a>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3">
+                  <img class="img-circle-thumbnail img-center" src="http://placekitten.com/g/263/263" alt="Jonathan Doe"/>
+                  <h3>Jonathan Doe</h3>
+                  <p>Technical support</p>
+                  <div class="social-networks">
+                    <a class="icon-facebook tooltipped" href="#" title="Facebook"></a>
+                    <a class="icon-twitter tooltipped" href="#" title="Twitter"></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </article>
+
         <article id="faq-panel" class="section-wrapper clearfix" data-custom-background-img="assets/images/sample-afternoon-panel/background.jpg">
           <section class="page-block faq">
             <div class="container">
-              <div class="row page-header">
-                <h2>FAQ</h2>
-                <span>Subtext for header</span>
-              </div>
+              <h2 class="section-title heading-center">FAQ</h2>
               <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-4">
-                  <img class="img-center" src="img/faq-icon.png" alt="FAQ"/>
+                  <img class="img-center" src="assets/images/sample-afternoon-panel/faq.png" alt="FAQ"/>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="panel-group" id="accordion-faq">
