added type form button

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     <!-- Javascripts
     ================================================== -->
 
+    <!-- Typeform -->
+
     <!-- Jquery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -417,25 +419,28 @@
                   
                   <div class="content-to-populate-in-modal" id="modal-content-1">
                     <h1>Location TBD</h1>
-                    <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">
+                    <span class="col-md-12 typeform-date">
+                      <a class="typeform-share btn btn-primary btn-lg active typeform-button" role="button" href="https://mushroomlearn.typeform.com/to/yuLoai" data-mode="2" target="_blank" >Save a spot</a>
+                    </span>  
                   </div>        
-                    <li>
-                      <h6 class="weeks">Week 1</h6>
-                      <p class="weeks">June 16 - June 20</p>
-                    </li>
-                    <li>
-                      <h6 class="weeks">Week 2</h6>
-                      <p class="weeks">June 23 - June 27</p>
-                    </li>
+                  <li>
+                    <h6 class="weeks">Week 1</h6>
+                    <p class="weeks">June 16 - June 20</p>
+                  </li>
+                  <li>
+                    <h6 class="weeks">Week 2</h6>
+                    <p class="weeks">June 23 - June 27</p>
+                  </li>
                 </div>
                 <div>
                   <h3><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">North Austin</a></h3>
                   
                   <div class="content-to-populate-in-modal" id="modal-content-1">
-                    <h1>Lorem Ipsum</h1>
-                    <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in urna vel ante mollis tincidunt. Donec nec magna condimentum tortor laoreet lobortis. Nunc accumsan sapien eu tortor fringilla, et condimentum metus pellentesque. Maecenas rhoncus tortor nec mi congue aliquet. Integer eu turpis scelerisque, iaculis magna non, tempor sem. Quisque consectetur nisi eu felis euismod, sit amet faucibus justo molestie. Ut pretium sapien dui, id facilisis metus interdum pharetra.</p>
-                    <p>Etiam scelerisque lacus tempor, rhoncus diam vel, gravida felis. Fusce tristique sem et leo aliquam vulputate. Ut eget orci in sapien commodo fringilla. Ut luctus faucibus viverra. Quisque ut ante eget libero rutrum imperdiet. Morbi in diam bibendum, venenatis arcu sed, consequat libero. Nulla imperdiet, ipsum et adipiscing pulvinar, nibh metus porta mauris, et vestibulum dolor sapien sit amet justo. In dignissim leo nec erat faucibus volutpat.</p> 
-                  </div>
+                    <h1>Location TBD</h1>
+                    <span class="col-md-12 typeform-date">
+                      <a class="typeform-share btn btn-primary btn-lg active typeform-button" role="button" href="https://mushroomlearn.typeform.com/to/yuLoai" data-mode="2" target="_blank" >Save a spot</a>
+                    </span>  
+                  </div>     
                   <li>
                     <h6 class="weeks">Week 3</h6>
                     <p class="weeks">July 7 - July 11</p>
@@ -463,11 +468,11 @@
                     <span class="price">$199 <span style="font-size: .5em;">/ week</span></span>
                   </div>
                   <div class="body">
-                    <uL>
+                    <ul>
                       <li>Either morning or afternoon</li>
                       <li>Specialized focus</li>
-                    </uL>
-                    <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
+                    </ul>
+                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" role="button" href="https://mushroomlearn.typeform.com/to/yuLoai" data-mode="2" target="_blank">Save a spot</a>
                   </div>
                 </div>
               </div>
@@ -478,12 +483,12 @@
                     <span class="price">$349 <span style="font-size: .5em;">/ week</span></span>
                   </div>
                   <div class="body">
-                    <uL>
+                    <ul>
                       <li>Both morning and afternoon</li>
                       <li>Complete approach</li>
                       <li>Lunch and yoga included</li>
-                    </uL>
-                    <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
+                    </ul>
+                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" role="button" href="https://mushroomlearn.typeform.com/to/yuLoai" data-mode="2" target="_blank">Save a spot</a>
                   </div>
                 </div>
               </div>
@@ -494,12 +499,12 @@
                     <span class="price"></span>
                   </div>
                   <div class="body">
-                    <uL>
+                    <ul>
                       <li>Aftercare: $10/hour</li>
                       <li>Lunch and yoga: $15/day</li>
                       <li>Laptop rental: $75/week</li>
-                    </uL>
-                    <div class="buy-btn"><a class="btn btn-primary" href="#">Buy</a></div>
+                    </ul>
+                    <a class="typeform-share btn btn-primary btn-lg active typeform-button" role="button" href="https://mushroomlearn.typeform.com/to/yuLoai" data-mode="2" target="_blank">Save a spot</a>
                   </div>
                 </div>
               </div>
@@ -559,7 +564,7 @@
               <h2 class="section-title heading-center">FAQ</h2>
               <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-4">
-                  <img class="img-center" src="assets/images/sample-afternoon-panel/faq.png" alt="FAQ"/>
+                  <img class="img-center" src="assets/images/flaticons/faq.png" alt="FAQ"/>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <div class="panel-group" id="accordion-faq">
@@ -677,7 +682,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <div class="modal-body">
+          <div class="modal-body temp-modal">
           </div><!-- .modal-body -->
         </div><!-- .modal-content -->
       </div><!-- .modal-dialog -->
